--- a/partials/post-author.hbs
+++ b/partials/post-author.hbs
@@ -10,8 +10,7 @@
     <section class="author-card-content">
         <h4 class="author-card-name"><a href="{{url}}">{{name}}</a></h4>
         {{#if bio}}
-            <p class="author-card-bio">{{bio}}</p>
-            <p class="author-card-bio">查看作者的 <a href="{{url}}">更多文章</a> 。</p>
+            <p class="author-card-bio"><a href="{{url}}">{{bio}}</a></p> 
         {{else}}
             <p class="author-card-bio">查看此作者的 <a href="{{url}}">更多文章</a> 。</p>
         {{/if}}
