--- a/partials/comment.hbs
+++ b/partials/comment.hbs
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
-  <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+<script src="js/md5.min.js"></script>
+
 
 <div id="comment">
     <h2 class="comment-header">评论</h2>
@@ -13,6 +15,7 @@
    repo: 'blog_talk',
    owner: '1314cc',
    admin: ['1314cc'],
+   id: md5(location.pathname),
    distractionFreeMode: false  // Facebook-like distraction free mode
 })
 gitalk.render('gitalk-container')
