--- a/default.hbs
+++ b/default.hbs
@@ -10,7 +10,7 @@
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="{{asset "favicon.ico"}}"> {{! Styles'n'Scripts }}
+    <link rel="icon" href="{{asset "favicon.ico"}}"> {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/typo.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/moegi.css"}}" />
     <link rel="stylesheet" href="//at.alicdn.com/t/font_430988_8cv60swk1t7w4s4i.css">
