--- a/default.hbs
+++ b/default.hbs
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="{{asset "css/typo.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/moegi.css"}}" />
     <link rel="stylesheet" href="//at.alicdn.com/t/font_430988_8cv60swk1t7w4s4i.css">
-    <link href="//lib.baomitu.com/highlight.js/9.12.0/styles/atom-one-light.min.css" rel="stylesheet">
+    <link href="//lib.baomitu.com/highlight.js/9.12.0/styles/rainbow.min.css" rel="stylesheet">
     <script src="//lib.baomitu.com/jquery/3.3.1/jquery.min.js"></script>
     {{!-- <script src="https://use.typekit.net/ueu5sio.js"></script> --}}
     {{!-- <script>try{Typekit.load({ async: true });}catch(e){}</script> --}}
