--- a/default.hbs
+++ b/default.hbs
@@ -27,7 +27,7 @@
         {{! Everything else gets inserted here }} {{{body}}}
 
         <footer class="blog-footer">
-            <p class="line-1">©2019-2019 ICP备案:<a href="http://www.miitbeian.gov.cn" target="_blank"> 晋ICP备19002155号-1</a></p>
+            <p class="line-1">©2019-2019 ICP备案:<a href="http://www.miitbeian.gov.cn" target="_blank"> 晋ICP备19002155号</a></p>
             <p class="line-2">&copy;<a href="{{@blog.url}}">{{@blog.title}}</a></p>
             <p id="footer-text" class="line-2"></p>
         </footer>
